--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -78,7 +78,9 @@ a {
 
 .add-expense-btn,
 .back-btn,
-.view-expense-btn {
+.view-expense-btn,
+.login-btn,
+.register-btn {
   display: inline-block;
   margin-top: 20px;
   padding: 10px 15px;
@@ -121,4 +123,43 @@ a {
 
 .expense-table td a.edit-expense-btn:hover {
   background-color: #1976D2;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #4290a7;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+h1 {
+  color: #333;
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+
+p {
+  color: #0a0909;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+}
+
+a {
+  color: #007BFF;
+  text-decoration: none;
+  font-size: 1rem;
+  margin: 0 10px;
+  padding: 10px 20px;
+  border: 1px solid #007BFF;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+a:hover {
+  background-color: #007BFF;
+  color: #fff;
 }
