--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -163,3 +163,17 @@ a:hover {
   background-color: #007BFF;
   color: #fff;
 }
+
+.delete-expense-btn {
+  padding: 5px 10px;
+  background-color: #ff4d4d;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.delete-expense-btn:hover {
+  background-color: #cc0000;
+}
